cicd/failfast-ci/gen-output/failfast-ci-worker.failfast-ci.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/part-of: failfast-ci
    k8s-app: failfast-ci-worker
  name: failfast-ci-worker
  namespace: failfast-ci
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ffci-worker
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: ffci-worker
    spec:
      containers:
      - command:
        - celery
        - -A
        - hub2labhook.jobs.runner
        - worker
        - -l
        - debug
        image: img.conny.dev/oss/ffci:latest
        imagePullPolicy: Always
        name: failfast-ci-worker
        volumeMounts:
        - mountPath: /etc/failfast-ci
          name: failfast-config
      volumes:
      - configMap:
          name: failfast-ci-c5bbk2tg9t
        name: failfast-config
