cicd/failfast-ci/gen-output/failfast-ci.failfast-ci.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: failfast-ci
    k8s-app: failfast-ci
  name: failfast-ci
  namespace: failfast-ci
spec:
  ports:
  - name: failfast-ci
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    k8s-app: failfast-ci
  type: ClusterIP
