cicd/failfast-ci/gen-output/failfast-redis.failfast-ci.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: failfast-ci
    k8s-app: failfast-redis
  name: failfast-redis
  namespace: failfast-ci
spec:
  ports:
  - name: redis
    port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    k8s-app: failfast-redis
  type: ClusterIP
